--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
-                <configuration>
+                <configur-ation>
                     <showDeprecation>true</showDeprecation>
-                </configuration>
+                </configur-ation>
             </plugin>
         </plugins>
     </build>
@@ -30,6 +30,8 @@
             <version>4.13</version>
             <scope>test</scope>
         </dependency>
+
+        <dependencies>
         <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
